src/test/ui/consts/miri_unleashed/assoc_const_2.stderr
error[E0080]: evaluation of `<std::string::String as Bar<std::string::String>>::F` failed
  --> $DIR/assoc_const_2.rs:10:20
   |
LL |     const F: u32 = 100 / U::X;
   |                    ^^^^^^^^^^ attempt to divide `100_u32` by zero

error[E0080]: erroneous constant used
  --> $DIR/assoc_const_2.rs:27:13
   |
LL |     let y = <String as Bar<String>>::F;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^ referenced constant has errors

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0080`.
